# chat-timeline

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/chat_timeline/: __init__.py  __main__.py  _state.py  app.py  cli.py  git_utils.py  init_cmd.py  markdown.py  paths.py  precommit.py  session.py  timeline.py
src/chat_timeline/_legacy/: __init__.py  claude.py  codex.py  cursor.py  main.py
src/chat_timeline/data/: LLM_INSTRUCTIONS.md
src/chat_timeline/sources/: __init__.py  _cache.py  base.py  claude.py  codex.py  cursor.py
src/chat_timeline/tui/: __init__.py  keyboard.py  selector.py
tests/: conftest.py  test_cache.py  test_cli.py  test_git_utils.py  test_init.py  test_install_hook.py  test_markdown.py  test_paths.py  test_precommit_hot_mode.py  test_sources_claude.py  test_sources_codex.py  test_timeline_hot_mode.py  test_tui_selector_helpers.py  test_uninstall_hook.py
